<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatic_break"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:layout_marginBottom="80dp"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/after_1hour"
        android:id="@+id/after_hour"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/after_2hours"
        android:id="@+id/after_2hours"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/after_3hours"
        android:id="@+id/after_3hours"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/different_time"
        android:id="@+id/diferent_time"
        android:layout_gravity="center"/>
</LinearLayout>
