<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_zone"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/localization_btn"
            style="@style/Widget.AppCompat.Button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:id="@+id/coordinates"
            android:text="@string/get_address"
            android:layout_gravity="center"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/green_btn"
        android:layout_marginBottom="5dp"
        android:text="@string/green_zone"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_horizontal_margin"
        android:background="#7ddc1f"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/yellow_btn"
        android:layout_marginBottom="5dp"
        android:text="@string/yellow_zone"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_horizontal_margin"
        android:background="#ead66c" />

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/red_btn"
        android:layout_marginBottom="5dp"
        android:text="@string/red_zone"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_horizontal_margin"
        android:background="#ff0000" />

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/blue_btn"
        android:layout_marginBottom="5dp"
        android:text="@string/blue_zone"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_horizontal_margin"
        android:background="#0000ff"/>

</LinearLayout>
